trying to fix CI server build by including maven-war build plugin directive, to make sure it deploys the sesame webapp on the embedded jetty server.